set(LIB_SRC sampleClass.cpp)
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/common")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/eventloop")

if(1)
  add_library(aev_static STATIC ${LIB_SRC})
  SET_TARGET_PROPERTIES(aev_static PROPERTIES LINKER_LANGUAGE CXX)
  SET_TARGET_PROPERTIES(aev_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
  SET_TARGET_PROPERTIES(aev_static PROPERTIES OUTPUT_NAME "aev")
  GET_TARGET_PROPERTY(OUTPUT_VALUE aev_static OUTPUT_NAME)
  MESSAGE(STATUS "This is the aev_static OUTPUT_NAME:" ${OUTPUT_VALUE})
  MESSAGE(STATUS "CXX flags are" ${CMAKE_CXX_FLAGS})

else(1)
  add_library(aev_shared SHARED ${LIB_SRC})
  SET_TARGET_PROPERTIES(aev_shared PROPERTIES LINKER_LANGUAGE CXX)
  SET_TARGET_PROPERTIES(aev_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)
  SET_TARGET_PROPERTIES(aev_shared PROPERTIES OUTPUT_NAME "aev")
  GET_TARGET_PROPERTY(OUTPUT_VALUE aev_shared OUTPUT_NAME)
  MESSAGE(STATUS "This is the aev_shared OUTPUT_NAME:" ${OUTPUT_VALUE})
endif(1)
